--- a/calculator/style.css
+++ b/calculator/style.css
@@ -1,99 +1,123 @@
 
-:root {
-    --background-color: grey;
-    --button-background-color: white;
-}
-
-body {
+*,*::after, *::before {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-
-
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50% , -50%);
 }
 
-.numpad {
-    display: grid;
-    background-color: var(--background-color);
-    grid-template-columns: repeat(5 , 1fr);
-    grid-template-rows: repeat(4 , 1fr);
-    width: 250px;    
-    height: 300px;  
-    gap: 5px;  
-    padding: 5px;
-}
-
-.item,
-.operator {
-    font-size: larger;
+body {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 1.25em;
     font-weight: bold;
-    box-shadow: .75px 1.5px 3px black;
-    background-color: var(--button-background-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background: url(./img/pexels-george-becker-374918.jpg) no-repeat center/cover   ;
 }
 
-.item:active,
-.operator:active {
-    background-color: transparent;
-    box-shadow: none;
-    border:  2px solid white;
-    color:white
+.container {
+    /* border: 2px solid red; */
+    border-radius: 10px;
+    min-height: 500px;
+    min-width: 400px;
+    padding: 1em;
+    background-color: rgba(0, 0, 0, .5);
 }
 
-.item:nth-of-type(10) {
-    grid-column: 1 / 4;
+.displays {
+    background-color: rgba(0, 0, 0, .8);
+    padding: 1em;
+    color: white;
 }
 
-.equals {
-    grid-column: 4 / 5;
-    grid-row: 4 / 5;
-}
-
-.plus {
-    grid-column: 4 / 5;
-    grid-row: 2 / 4;
-
-}
-
-.minus {
-    grid-column: 4 / 5;
-    grid-row: 1 / 2;
-}
-
-.ac {
-    grid-column: 5 / 6 ;
-    grid-row: 1 / 5 ;
-    background-color: rgb(241, 100, 100);
-}
-
-div {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: large;
-    font-weight: bold;
-    box-sizing: border-box;
-    height: 100px;
-    display: block;
-    border: 2px black solid;
-    margin-bottom: 1em;
-    padding: 12px;
-
-}
-
-#input-1 {
-    height: 50%;
-    margin: 0;
-    padding-top: 8px;
-    padding-left: 8px;
-    background-color: rgb(214, 214, 214);
+p {
+    height: 1em;
+    text-align: end;
+    margin-bottom: 10px;
     font-weight: normal;
 }
 
-#input-2 {
-    padding-top: 8px;
-    height: 50%;
-    margin: 0;
+.display-1 {
+    font-size: smaller;
 }
+
+.buttons {
+    display: grid;
+    grid-template-rows: repeat(8, 1fr);
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 4px;
+    height: 400px;
+    margin-top: 2px;
+}
+
+button {
+    background-color: rgba(0, 0, 0, .6);
+    color: white;
+    font-size: 25px;
+    font-weight: bold;
+    border: 5px solid rgba(0, 0, 0, .6);
+    cursor: pointer;
+}
+
+button:active {
+    background-color: rgba(100, 100, 100, .6);
+    border: 5px solid rgba(100, 100, 100, .6);
+}
+/* grid rows */
+.delete,
+.clear-all {
+    grid-row: 1 / 2;
+}
+
+.equal {
+    grid-row: 6 / 9;
+}
+
+button[value="1"],
+button[value="2"],
+button[value="3"] {
+    grid-row: 2 / 4;
+}
+
+button[value="4"],
+button[value="5"],
+button[value="6"] {
+    grid-row: 4 / 6;
+}
+
+button[value="7"],
+button[value="8"],
+button[value="9"] {
+    grid-row: 6 / 8;
+}
+
+/* grid columns */
+.delete {
+    grid-column: 2 / 5;
+}
+
+button[value="1"],
+button[value="4"],
+button[value="7"] {
+    grid-column: 1 / 2;
+}
+
+button[value="2"],
+button[value="5"],
+button[value="8"] {
+    grid-column: 2 / 3;
+}
+
+button[value="3"],
+button[value="6"],
+button[value="9"] {
+    grid-column: 3 / 4;
+}
+
+/* button 0 */
+button[value="0"] {
+    grid-row: 8 / 9;
+    grid-column: 1 / 4;
+}
+
